fix: album title

--- a/News App/Page/UserDetail/Cell/HeaderAlbumCollectionReusableView.xib
+++ b/News App/Page/UserDetail/Cell/HeaderAlbumCollectionReusableView.xib
@@ -19,7 +19,7 @@
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JFs-kQ-crL">
                             <rect key="frame" x="16" y="8" width="337" height="183"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
